<<<<<<< HEAD
<<<<<<< HEAD
[gd_scene load_steps=29 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Combat/Character.gd" type="Script" id=2]
[ext_resource path="res://Combat/CombatCore.gd" type="Script" id=3]
[ext_resource path="res://Sprites/right (2).png" type="Texture" id=4]
[ext_resource path="res://Sprites/right.png" type="Texture" id=5]
[ext_resource path="res://Sprites/downright.png" type="Texture" id=6]
[ext_resource path="res://Sprites/downright (2).png" type="Texture" id=7]
[ext_resource path="res://Sprites/upleft.png" type="Texture" id=8]
[ext_resource path="res://Sprites/upleft (2).png" type="Texture" id=9]
[ext_resource path="res://Sprites/attack2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/attack1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Down.png" type="Texture" id=12]
[ext_resource path="res://Sprites/left.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Up.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Up (2).png" type="Texture" id=15]
[ext_resource path="res://Sprites/Down (2).png" type="Texture" id=16]
[ext_resource path="res://Sprites/upright.png" type="Texture" id=17]
[ext_resource path="res://Sprites/upright (2).png" type="Texture" id=18]
[ext_resource path="res://Sprites/downleft.png" type="Texture" id=19]
[ext_resource path="res://Sprites/downleft (2).png" type="Texture" id=20]
[ext_resource path="res://Sprites/left2.png" type="Texture" id=21]
[ext_resource path="res://Player/Idle.gd" type="Script" id=22]
[ext_resource path="res://Player/Moving.gd" type="Script" id=23]
[ext_resource path="res://Player/LightAttack.gd" type="Script" id=24]
[ext_resource path="res://Player/HeavyAttack.gd" type="Script" id=25]
[ext_resource path="res://Player/Block.gd" type="Script" id=26]
=======
[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
=======
[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
[ext_resource path="res://Combat/CombatCore.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Down.png" type="Texture" id=3]
[ext_resource path="res://Sprites/right (2).png" type="Texture" id=4]
[ext_resource path="res://Sprites/right.png" type="Texture" id=5]
[ext_resource path="res://Sprites/attack1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/attack2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Down (2).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Up.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Up (2).png" type="Texture" id=10]
[ext_resource path="res://Sprites/left.png" type="Texture" id=11]
[ext_resource path="res://Sprites/left2.png" type="Texture" id=12]
[ext_resource path="res://Player/Idle.gd" type="Script" id=13]
[ext_resource path="res://Player/Moving.gd" type="Script" id=14]
[ext_resource path="res://Player/LightAttack.gd" type="Script" id=15]
[ext_resource path="res://Player/HeavyAttack.gd" type="Script" id=16]
[ext_resource path="res://Player/Block.gd" type="Script" id=17]
<<<<<<< HEAD
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
=======
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17

[sub_resource type="SpriteFrames" id=1]

animations = [ {
<<<<<<< HEAD
<<<<<<< HEAD
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
=======
"frames": [ ExtResource( 3 ) ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"loop": true,
"name": "East",
"speed": 3.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "SEast",
"speed": 3.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "NWest",
"speed": 3.0
}, {
"frames": [ ExtResource( 10 ), null ],
=======
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"loop": true,
"name": "East",
"speed": 3.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 11 ), ExtResource( 10 ), null ],
=======
"frames": [ ExtResource( 6 ), ExtResource( 7 ), null ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"loop": false,
"name": "HeavyAttack",
"speed": 2.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 12 ) ],
=======
"frames": [ ExtResource( 3 ) ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"loop": true,
"name": "IdleSouth",
"speed": 5.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 11 ), ExtResource( 10 ), null ],
=======
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "South",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), null ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"loop": false,
"name": "RangedAttack",
"speed": 0.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "IdleWest",
"speed": 5.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 11 ), ExtResource( 10 ), null ],
=======
"frames": [ ExtResource( 6 ), ExtResource( 7 ), null ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
=======
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "East",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), null ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"loop": false,
"name": "HeavyAttack",
"speed": 2.0
}, {
<<<<<<< HEAD
<<<<<<< HEAD
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "IdleNorthWest",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 14 ) ],
=======
"frames": [ ExtResource( 7 ) ],
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"loop": true,
"name": "Block",
=======
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "South",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), null ],
"loop": false,
"name": "Parry",
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), null ],
"loop": false,
<<<<<<< HEAD
"name": "RangedAttack",
"speed": 0.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 12 ), ExtResource( 12 ) ],
"loop": true,
<<<<<<< HEAD
"name": "South",
=======
"name": "North",
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"speed": 3.0
=======
"name": "LightAttack",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Block",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), null ],
"loop": false,
"name": "RangedAttack",
"speed": 0.0
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
<<<<<<< HEAD
<<<<<<< HEAD
"name": "NEast",
=======
"name": "North",
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"speed": 3.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
<<<<<<< HEAD
"name": "SWest",
"speed": 3.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 21 ), ExtResource( 13 ) ],
"loop": true,
=======
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
=======
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
"name": "West",
"speed": 3.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "IdleNorth",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "IdleSouthEast",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "IdleNorthEast",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "IdleSouthWest",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "IdleEast",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 17.4563, 21.401 )

[node name="player" type="KinematicBody2D"]

position = Vector2( 0, 1 )
input_pickable = true
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
move_speed = 200

[node name="CombatCore" type="Node" parent="."]

script = ExtResource( 2 )
max_health = 10
max_charges = 5
block_angle = 45

[node name="PlayerSprite" type="AnimatedSprite" parent="."]

scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "IdleSouth"
_sections_unfolded = [ "Transform" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]

position = Vector2( 0.0877111, -0.00123465 )
scale = Vector2( 0.996575, 0.998028 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="States" type="Node" parent="."]

editor/display_folded = true

[node name="Idle" type="Node" parent="States"]

<<<<<<< HEAD
<<<<<<< HEAD
script = ExtResource( 22 )

[node name="Moving" type="Node" parent="States"]

script = ExtResource( 23 )

[node name="LightAttack" type="Node" parent="States"]

script = ExtResource( 24 )

[node name="HeavyAttack" type="Node" parent="States"]

script = ExtResource( 25 )

[node name="Block" type="Node" parent="States"]

script = ExtResource( 26 )
=======
script = ExtResource( 13 )

[node name="Moving" type="Node" parent="States"]

script = ExtResource( 14 )

[node name="LightAttack" type="Node" parent="States"]

script = ExtResource( 15 )

[node name="HeavyAttack" type="Node" parent="States"]

=======
script = ExtResource( 13 )

[node name="Moving" type="Node" parent="States"]

script = ExtResource( 14 )

[node name="LightAttack" type="Node" parent="States"]

script = ExtResource( 15 )

[node name="HeavyAttack" type="Node" parent="States"]

>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
script = ExtResource( 16 )

[node name="Block" type="Node" parent="States"]

script = ExtResource( 17 )
<<<<<<< HEAD
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17
=======
>>>>>>> fe94359060dcd6358d83fa6a5c805e39cd524e17


